# clearutils

./: .gitignore  Readme.md  Requirements.txt  pyproject.toml
Beginner_docs/: Manage venvs and Python versions.md
src/clearutils/: __init__.py  backup_engine.py  format_engine.py  test_engine.py
