[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearutils"
version = "0.1.0"
description = "A collection of clear, modular helpers for testing, logging, formatting, and more."
authors = [
    { name = "Renya Wasson", email = "renya.wasson@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas"
]
[tool.setuptools.packages.find]
where = ["src"]